Fixed runner for *nix/macos